Join stmt works as intended, displays the given columns from multiple tables, updated logic behind when using index collection